Attempt to fix scrollbars from appearing when mainwindow is moved

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@ body {
 }
 
 #mainwindow {
-    position: absolute;
+    position: fixed;
     z-index: 1;
     width: 350px;
     height: 388px;
